updates to systematics config, skeleton evaluation of syst samples in preselection notebook

--- a/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
@@ -334,6 +334,8 @@
     "    'JES_dn': {'jes': 0.98}\n",
     "}\n",
     "\n",
+    "\n",
+    "\n",
     "dataset_dict = {}\n",
     "\n",
     "dataset_dict['nominal'] = systematics(\n",
@@ -530,16 +532,45 @@
    },
    "outputs": [],
    "source": [
+    "path_to_data_save = {}\n",
+    "\n",
     "# Save the datasets for training and inference\n",
     "for sample in dataset_dict: \n",
-    "    path_to_data_save = f\"{PATH_SAVED_DATA}df_{sample}.h5\"\n",
-    "    dataset_dict[sample].to_hdf(path_to_data_save, key=\"dataset\", mode=\"w\")\n",
-    "    config[f\"PATH_TO_{sample}_DATA\"] = path_to_data_save"
+    "    path_to_data_save[sample] = f\"{PATH_SAVED_DATA}df_{sample}.h5\"\n",
+    "    dataset_dict[sample].to_hdf(path_to_data_save[sample], key=\"dataset\", mode=\"w\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config.update(\n",
+    "    {\n",
+    "        \"Systematics\": [\n",
+    "            {\n",
+    "                \"Name\"       : \"TES\",\n",
+    "                \"weight_up\"  : path_to_data_save[\"TES_up\"],\n",
+    "                \"weight_dn\"  : path_to_data_save[\"TES_dn\"],\n",
+    "                \"Type\"       : \"NormPlusShape\",\n",
+    "                \"Samples\"    : [\"htautau\", \"ztautau\", \"ttbar\"]\n",
+    "            },\n",
+    "            {\n",
+    "                \"Name\"       : \"JES\",\n",
+    "                \"weight_up\"  : path_to_data_save[\"JES_up\"],\n",
+    "                \"weight_dn\"  : path_to_data_save[\"JES_dn\"],\n",
+    "                \"Type\"       : \"NormPlusShape\",\n",
+    "                \"Samples\"    : [\"htautau\", \"ztautau\", \"ttbar\"]\n",
+    "            },\n",
+    "        ]\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
