--- a/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -913,6 +913,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6ca2368b-d86a-4c07-a81a-7f58dd792247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the updated YAML back to the file\n",
+    "with open('config.yml', 'w') as file:\n",
+    "    yaml.dump(\n",
+    "        config, file, \n",
+    "        default_flow_style=False,\n",
+    "        sort_keys=False, indent=4, width=1000                 \n",
+    "    )"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "7aa27cca-fecf-426a-a7c5-a77d82a4de2a",
