--- a/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
+++ b/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
@@ -13,13 +13,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jsandesara_umass_edu/.conda/envs/nsbi_env/lib/python3.9/site-packages/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-08-09 16:59:05.789361: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-08-09 16:59:05.801437: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-08-09 16:59:05.814301: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-08-09 16:59:05.818496: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-08-09 16:59:05.829072: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-08-10 09:07:26.486814: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-08-10 09:07:26.500097: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-08-10 09:07:26.511751: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-08-10 09:07:26.515736: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-08-10 09:07:26.525562: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -313,9 +313,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-09 16:59:14.069822: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2021] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 13377 MB memory:  -> device: 0, name: NVIDIA A16, pci bus id: 0000:c7:00.0, compute capability: 8.6\n",
-      "2025-08-09 16:59:15.180931: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
-      "2025-08-09 16:59:15.197215: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:531] Loaded cuDNN version 91100\n"
+      "2025-08-10 09:07:34.602852: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2021] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 13377 MB memory:  -> device: 0, name: NVIDIA A16, pci bus id: 0000:c6:00.0, compute capability: 8.6\n",
+      "2025-08-10 09:07:35.717202: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2025-08-10 09:07:35.733413: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:531] Loaded cuDNN version 91100\n"
      ]
     },
     {
@@ -415,6 +415,16 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Play around with these selections - decrease if estimators are unbiased but need more sensitivity and increase if the model is biased to reduce complexity\n",
+    "preselection_cuts = {'upper': 4.5, 'lower': -1.}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -453,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -504,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,12 +533,13 @@
     "                             'preselections': f\"presel_score>={preselection_cuts.get('lower')} & presel_score<={preselection_cuts.get('upper')}\"\n",
     "                            }}\n",
     "\n",
+    "\n",
     "dataset_channels = preselection_using_score(dataset_incl_nominal, channel_selections)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +606,7 @@
        "array([1.603611], dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +626,7 @@
        "Text(0, 1, 'Density')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -647,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +667,7 @@
        "Text(0, 1, 'Density')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -688,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,6 +716,35 @@
    "source": [
     "# # Save the preselected Nominal dataframe for inference use later on\n",
     "dataset_incl_nominal.to_hdf(f\"{path_to_nominal_dataframe}\", key=\"dataset\", mode='w')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for systematics_dict in config[\"Systematics\"]:\n",
+    "\n",
+    "    type_syst = systematics_dict.get(\"Type\")\n",
+    "    if type_syst==\"NormPlusShape\":\n",
+    "        for variation in [\"weight_up\", \"weight_dn\"]:\n",
+    "            path_to_sample = systematics_dict[variation]\n",
+    "            df_syst = pd.read_hdf(path_to_sample, key=\"dataset\", mode=\"r\")\n",
+    "\n",
+    "            # Get predictions (softmax outputs)\n",
+    "            pred_NN_incl = preselectionTraining.predict(df_syst)\n",
+    "            \n",
+    "            presel_score = calculate_preselection_observable(pred_NN_incl, \n",
+    "                                                             labels_dict, \n",
+    "                                                             signal_processes, \n",
+    "                                                             background_processes, \n",
+    "                                                             pre_factor_dict = {'htautau': 1.0, 'ttbar': 1.0, 'ztautau': 1.0})\n",
+    "            \n",
+    "            df_syst['presel_score'] = presel_score\n",
+    "\n",
+    "            df_syst.to_hdf(f\"{path_to_sample}\", key=\"dataset\", mode='w')\n",
+    "            "
    ]
   },
   {
