--- a/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
@@ -49,14 +49,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-07-12 15:17:34.125105: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1752333454.138450     178 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1752333454.142674     178 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-07-12 15:17:34.158368: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2025-08-10 08:34:47.278055: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-08-10 08:34:47.291365: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-08-10 08:34:47.303254: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-08-10 08:34:47.307375: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-08-10 08:34:47.317994: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -112,39 +112,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path prefix for general save directory\n",
-    "path_prefix = config['path_prefix']\n",
-    "\n",
-    "# sub-path for saving cached data used between modules\n",
-    "path_saved_data = config['path_saved_data']\n",
-    "saved_data = f'{path_prefix}{path_saved_data}'\n",
-    "\n",
-    "# Path for loading preselection NN model\n",
-    "path_preselection_NN_model = config['path_preselection_NN_model']\n",
-    "path_to_saved_presel_model = f'{path_prefix}{path_preselection_NN_model}'\n",
-    "\n",
-    "# Input features for training\n",
-    "features = config[\"features\"]\n",
-    "\n",
-    "channels_binned = config[\"channels_binned\"]\n",
-    "\n",
-    "# Subset of the features to standardize before training\n",
-    "features_scaling = config[\"features_scaling\"]\n",
-    "\n",
     "# Get the dictionary of labels to processes\n",
-    "labels_dict = config[\"labels_dict\"]\n",
+    "labels_dict = config[\"PROCESS_TO_INT_LABELS_DICT\"]\n",
     "\n",
     "# Signal processes in the model\n",
-    "signal_processes = config[\"signal_processes\"]\n",
+    "SIGNAL_PROCESSES = config[\"SIGNAL_PROCESSES\"]\n",
     "\n",
     "# Background processes in the model\n",
-    "background_processes = config[\"background_processes\"]\n",
+    "BACKGROUND_PROCESSES = config[\"BACKGROUND_PROCESSES\"]\n",
     "\n",
-    "mix_model_hypotheses = config[\"mix_model_hypotheses\"]\n",
-    "ref_processes = config[\"ref_processes\"]\n",
+    "REF_PROCESSES = config[\"REFERENCE_PROCESSES\"]\n",
     "\n",
-    "# float factors multiplying the probabilities in the preselection score observable \n",
-    "pre_factor_preselection_score = config[\"pre_factor_preselection_score\"]\n"
+    "MIX_MODEL_HYPOTHESES = config[\"MIX_MODEL_HYPOTHESES\"]\n",
+    "\n",
+    "print(SIGNAL_PROCESSES)\n",
+    "print(BACKGROUND_PROCESSES)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba89ff31-5e4d-42fc-93f6-365dc69eb4c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input features for training\n",
+    "features = config[\"TRAINING_FEATURES\"]\n",
+    "\n",
+    "# Subset of the features to standardize before training\n",
+    "features_scaling = config[\"TRAINING_FEATURES_TO_SCALE\"]\n",
+    "\n",
+    "# channels_binned = config[\"channels_binned\"]\n",
+    "\n",
+    "# # Get the dictionary of labels to processes\n",
+    "# labels_dict = config[\"labels_dict\"]\n",
+    "\n",
+    "# # Signal processes in the model\n",
+    "# SIGNAL_PROCESSES = config[\"SIGNAL_PROCESSES\"]\n",
+    "\n",
+    "# # Background processes in the model\n",
+    "# BACKGROUND_PROCESSES = config[\"BACKGROUND_PROCESSES\"]\n",
+    "\n",
+    "# mix_model_hypotheses = config[\"mix_model_hypotheses\"]\n",
+    "# REF_PROCESSES = config[\"REF_PROCESSES\"]\n",
+    "\n",
+    "# # float factors multiplying the probabilities in the preselection score observable \n",
+    "# pre_factor_preselection_score = config[\"pre_factor_preselection_score\"]\n"
    ]
   },
   {
@@ -198,8 +211,8 @@
     "pred_NN_incl_nom = np.load(f\"{saved_data}pred_NN_incl.npy\")\n",
     "\n",
     "presel_score_nom = calculate_preselection_observable(pred_NN_incl_nom, \n",
-    "                                                     labels_dict, signal_processes, \n",
-    "                                                     background_processes, \n",
+    "                                                     labels_dict, SIGNAL_PROCESSES, \n",
+    "                                                     BACKGROUND_PROCESSES, \n",
     "                                                     pre_factor_dict = pre_factor_preselection_score)\n",
     "\n",
     "dataset_nom['presel_score'] = presel_score_nom\n",
@@ -234,7 +247,7 @@
     "        pred_NN_incl = preselectionTraining.predict(dataset)\n",
     "\n",
     "        presel_score = calculate_preselection_observable(pred_NN_incl, labels_dict, \n",
-    "                                                         signal_processes, background_processes)\n",
+    "                                                         SIGNAL_PROCESSES, BACKGROUND_PROCESSES)\n",
     "\n",
     "        datasets_syst[syst][direction]['presel_score'] = presel_score\n",
     "\n",
@@ -411,7 +424,7 @@
     "importlib.reload(sys.modules['nsbi_common_utils.training'])\n",
     "from nsbi_common_utils.training import TrainEvaluate_NN\n",
     "\n",
-    "ref_processes = np.load(f\"{saved_data}ref_processes.npy\")\n",
+    "REF_PROCESSES = np.load(f\"{saved_data}REF_PROCESSES.npy\")\n",
     "\n",
     "dataset_syst_process = {}\n",
     "NN_training_syst_process = {}\n",
@@ -459,7 +472,7 @@
     "            dataset_num['weights_normed'] = dataset_num['weights'].to_numpy() / dataset_num['weights'].sum()\n",
     "            dataset_den['weights_normed'] = dataset_den['weights'].to_numpy() / dataset_den['weights'].sum()\n",
     "            \n",
-    "            # Build a training dataset for the training of p_<process_type>/p_<ref_processes> density ratio\n",
+    "            # Build a training dataset for the training of p_<process_type>/p_<REF_PROCESSES> density ratio\n",
     "            dataset_syst_process = pd.concat([dataset_num, dataset_den])\n",
     "\n",
     "            \n",
