quick test of preselection

--- a/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
+++ b/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
@@ -2,28 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
-      "  hep.set_style(\"ATLAS\")\n",
-      "2025-08-10 09:07:26.486814: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-08-10 09:07:26.500097: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-08-10 09:07:26.511751: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-08-10 09:07:26.515736: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-08-10 09:07:26.525562: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys, pathlib, importlib\n",
     "sys.path.append('../')\n",
@@ -59,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -73,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -95,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -127,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -147,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -163,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -178,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -221,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -243,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -280,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -301,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true,
     "vscode": {
@@ -310,19 +295,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-08-10 09:07:34.602852: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2021] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 13377 MB memory:  -> device: 0, name: NVIDIA A16, pci bus id: 0000:c6:00.0, compute capability: 8.6\n",
-      "2025-08-10 09:07:35.717202: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
-      "2025-08-10 09:07:35.733413: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:531] Loaded cuDNN version 91100\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 5ms/step\n"
+      "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 5ms/step\n"
      ]
     }
    ],
@@ -351,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -414,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -463,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -514,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +582,7 @@
        "array([1.603611], dtype=float32)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +602,7 @@
        "Text(0, 1, 'Density')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -658,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +643,7 @@
        "Text(0, 1, 'Density')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -699,18 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dataset = dataset_channels['SR'].copy()\n",
-    "\n",
-    "# del dataset_channels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,15 +685,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 5ms/step\n",
+      "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 5ms/step\n",
+      "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 5ms/step\n",
+      "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 5ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "for systematics_dict in config[\"Systematics\"]:\n",
     "\n",
     "    type_syst = systematics_dict.get(\"Type\")\n",
     "    if type_syst==\"NormPlusShape\":\n",
     "        for variation in [\"weight_up\", \"weight_dn\"]:\n",
+    "            \n",
     "            path_to_sample = systematics_dict[variation]\n",
     "            df_syst = pd.read_hdf(path_to_sample, key=\"dataset\", mode=\"r\")\n",
     "\n",
@@ -738,8 +715,7 @@
     "            presel_score = calculate_preselection_observable(pred_NN_incl, \n",
     "                                                             labels_dict, \n",
     "                                                             signal_processes, \n",
-    "                                                             background_processes, \n",
-    "                                                             pre_factor_dict = {'htautau': 1.0, 'ttbar': 1.0, 'ztautau': 1.0})\n",
+    "                                                             background_processes)\n",
     "            \n",
     "            df_syst['presel_score'] = presel_score\n",
     "\n",
@@ -749,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
