new configuration class

--- a/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
+++ b/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
@@ -67,8 +67,11 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"config.yml\", \"r\") as f:\n",
-    "    config = yaml.safe_load(f)"
+    "## read from a serialized config file, \"we\" convert it into some object from a well-defined class, \n",
+    "## user modify the object as user needs, and then at the end of the step, \"we\" write again to the serialized config\n",
+    "## define mutable vs immutable information\n",
+    "\n",
+    "config = nsbi_common_utils.configuration.load(\"config.yml\")"
    ]
   },
   {
@@ -419,7 +422,9 @@
    "outputs": [],
    "source": [
     "# Play around with these selections - decrease if estimators are unbiased but need more sensitivity and increase if the model is biased to reduce complexity\n",
-    "preselection_cuts = {'upper': 4.5, 'lower': -1.}"
+    "preselection_cuts = {'upper': 4.5, 'lower': -1.}\n",
+    "\n",
+    "## Convert to an object that takes inputs - better for dynamic changing"
    ]
   },
   {
